--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -62,7 +62,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/libr">图书馆余书查询</a></li>
                 <li><a href="/cet">CET</a></li>
-                <li><a href="/cet/old">往年CET成绩</a></li>
+                <li><a href="/cet/former">往年CET成绩</a></li>
                 <li class="divider"></li>
                 <li><a href="/notice.html">公告</a></li>
                 <li><a href="/contact.html">联系我们</a></li>
