--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="footer">
   <center>
-    <a href="/api" target="_blank">APIs</a>&nbsp;
+    <a href="http://api.gotit.asia" target="_blank">API</a>&nbsp;
     Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
     <a href="http://python.org/" target="_blank">python</a>&nbsp;
     <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
