--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
 
   <div class="col-lg-6">
 
-    <div class="well" onclick="location.href='/cet/old';" style="cursor:pointer;">
-      <h4><a href="/cet/old">往年四六级成绩</a></h4>
+    <div class="well" onclick="location.href='/cet/former';" style="cursor:pointer;">
+      <h4><a href="/cet/former">往年四六级成绩</a></h4>
       <p>往年四六级成绩查询，看看你的战绩！</p>
     </div>
     <div class="well" onclick="location.href='/donate.html#names';" style="cursor:pointer;">
