--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,8 @@
   </div>
 
   <div class="col-lg-6">
-    <div class="well" onclick="location.href='/weixin';" style="cursor:pointer;">
-      <h4><a href="/weixin">微信公众账号</a></h4>
+    <div class="well" onclick="location.href='http://wechat.gotit.asia';" style="cursor:pointer;">
+      <h4><a href="http://wechat.gotit.asia">微信公众账号</a></h4>
       <p>微信公众账号，成绩查询，方便快捷！</p>
     </div>
   </div>
