--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -18,5 +18,5 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-    <script src="/static/js/html5shiv.js"></script>
+    <script src="http://gotit.qiniudn.com/js/html5shiv.min.js"></script>
     <![endif]-->
