--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -20,3 +20,7 @@
     <!--[if lt IE 9]>
     <script src="http://gotit.qiniudn.com/js/html5shiv.min.js"></script>
     <![endif]-->
+    <!-- Favicons -->
+    <link rel="apple-touch-icon-precomposed" sizes="256x256" href="http://gotit.qiniudn.com/ico/favicon.png">
+    <link rel="shortcut icon" href="http://gotit.qiniudn.com/ico/favicon.png">
+
